--- a/task-03.html
+++ b/task-03.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 3</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      .gallery {
+  display: flex;
+  gap: 10px;
+  
+}
+
+.gallery-img {
+  width: 30vw;
+  height:40vh;
+}
+
+.gallery-item {
+  list-style:  none;
+}
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
